<resources>
    <string name="app_name">SegundaProva</string>

    <string name="hello_blank_fragment">Hello world</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="cidade">Cidade</string>
    <string name="anoNascimento">Ano nascimento</string>
    <string name="cpf">Cpf</string>
    <string name="profissao">Profissao</string>
    <string name="cadastro">Cadastro</string>
    <string name="cancelar">Cancelar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Voltar">Voltar</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="techs">Tecnologias:</string>
    <string name="techsnames">Python , Java , JavaScript ,
        Kotlin , ReactJS/Native</string>
    <string name="cidadeNatal">Natal/RN</string>
    <string name="emailUFRN">leodhegam@ufrn.edu.br</string>
    <string name="githubPessoal">leodhegam</string>
    <string name="Github">Github</string>
    <string name="nomeLeo">Leonardo Dhegam</string>
    <string name="ajudaAltera">Nesta tela , você poderá alterar os campos de cadastro e atualizar suas informações. Preencha os campos que deseja modificar e aperte em confirmar</string>
    <string name="ajudaCadastro">Nesta tela, você poderá cadastrar um novo usuário. Siga as instruções dos campos e ao terminar, clique em cadastrar</string>
    <string name="ajudaHome">Nesta tela , você poderá ver os usuários cadastrados no sitema , podendo ver suas informações, editar o cadastro e cadastrar novos usuários</string>
    <string name="ajudaDetalhes">Nesta tela , você poderá verificar as informações de cada usuário cadastrado no sistema.</string>
    <string name="instituicao">Instituição</string>
    <string name="ufrn">UFRN</string>
    <string name="usuario">Usuarios</string>
</resources>